# Envisaged

./: .dockerignore  .gitignore  .travis.yml  AGENTS.md  Dockerfile  Dockerfile.old  LICENSE  Makefile  README.md  app.py  border_template.sh  create_video.sh  devbox.json  docker-entrypoint.sh  envisaged.py  flake.nix  http.conf  no_template.sh  pipeline.yml  pyproject.toml  requirements.txt  setup.py  test_app.py  treefmt.nix
.circleci/: config.yml
.github/workflows/: build.yml  ci.yml  docker-build.yml  publish-docker.yml
.trunk/: trunk.yaml
envisaged/gource_generator/: README.md  __init__.py  cli.py  config.py  generator.py
envisaged/gource_generator/tests/: __init__.py  test_generator.py
html/: completed.html  processing_gource.html
scripts/: envisaged  example-system-services  web-dev  web-prod
src/envisaged/: __init__.py  cli.py  templates.py  web.py
src/envisaged/web_templates/: index.html
systemd/user/: envisaged-web-dev.service  envisaged-web.service
